tests/unsafe_getters_setters/unsafe_getters_setters.exp
Error -------------------------------------------- unsafe_getters_setters.js:6:3

Getters and setters can have side effects and are unsafe.
(`unsafe-getters-setters`)

Error: unsafe_getters_setters.js:6
  6:   get a() { return 4; },
       ^^^^^^^^^^^^^^^^^^^^^ Getters and setters can have side effects and are unsafe. (`unsafe-getters-setters`)

Error -------------------------------------------- unsafe_getters_setters.js:7:3

Getters and setters can have side effects and are unsafe.
(`unsafe-getters-setters`)

Error: unsafe_getters_setters.js:7
  7:   set b(x: number) { this.c = x; },
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Getters and setters can have side effects and are unsafe. (`unsafe-getters-setters`)

Error ------------------------------------------- unsafe_getters_setters.js:12:3

Getters and setters can have side effects and are unsafe.
(`unsafe-getters-setters`)

Error: unsafe_getters_setters.js:12
 12:   get a() { return 4; }
       ^^^^^^^^^^^^^^^^^^^^^ Getters and setters can have side effects and are unsafe. (`unsafe-getters-setters`)

Error ------------------------------------------- unsafe_getters_setters.js:13:3

Getters and setters can have side effects and are unsafe.
(`unsafe-getters-setters`)

Error: unsafe_getters_setters.js:13
 13:   set b(x: number) { this.c = x; }
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Getters and setters can have side effects and are unsafe. (`unsafe-getters-setters`)

Error ------------------------------------------- unsafe_getters_setters.js:18:3

Getters and setters can have side effects and are unsafe.
(`unsafe-getters-setters`)

Error: unsafe_getters_setters.js:18
 18:   get a(): number,
       ^^^^^^^^^^^^^^^ Getters and setters can have side effects and are unsafe. (`unsafe-getters-setters`)

Error ------------------------------------------- unsafe_getters_setters.js:19:3

Getters and setters can have side effects and are unsafe.
(`unsafe-getters-setters`)

Error: unsafe_getters_setters.js:19
 19:   set b(x: number): void,
       ^^^^^^^^^^^^^^^^^^^^^^ Getters and setters can have side effects and are unsafe. (`unsafe-getters-setters`)

Error ------------------------------------------- unsafe_getters_setters.js:24:3

Getters and setters can have side effects and are unsafe.
(`unsafe-getters-setters`)

Error: unsafe_getters_setters.js:24
 24:   get a(): number;
       ^^^^^^^^^^^^^^^ Getters and setters can have side effects and are unsafe. (`unsafe-getters-setters`)

Error ------------------------------------------- unsafe_getters_setters.js:25:3

Getters and setters can have side effects and are unsafe.
(`unsafe-getters-setters`)

Error: unsafe_getters_setters.js:25
 25:   set b(x: number): void;
       ^^^^^^^^^^^^^^^^^^^^^^ Getters and setters can have side effects and are unsafe. (`unsafe-getters-setters`)

Error ------------------------------------------- unsafe_getters_setters.js:31:3

Getters and setters can have side effects and are unsafe.
(`unsafe-getters-setters`)

Error: unsafe_getters_setters.js:31
 31:   get b(): number;
       ^^^^^^^^^^^^^^^ Getters and setters can have side effects and are unsafe. (`unsafe-getters-setters`)

Error ------------------------------------------- unsafe_getters_setters.js:32:3

Getters and setters can have side effects and are unsafe.
(`unsafe-getters-setters`)

Error: unsafe_getters_setters.js:32
 32:   set c(x: number): void;
       ^^^^^^^^^^^^^^^^^^^^^^ Getters and setters can have side effects and are unsafe. (`unsafe-getters-setters`)


Found 10 errors
